force-app/main/default/objects/Studdent__c/Studdent__c.object-meta.xml
<CustomObject>
    <description>Student</description>
    <label>Studdent</label>
    <nameField>
        <label>Studdent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Studdents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>