force-app/main/default/objects/Studdent__c/fields/Hobbies__c.field-meta.xml
<CustomField>
    <fullName>Hobbies__c</fullName>
    <externalId>true</externalId>
    <label>Hobbies</label>
    <length>10</length>
    <type>Text</type>
</CustomField>