force-app/main/default/objects/Studdent__c/fields/Marks__c.field-meta.xml
<CustomField>
    <fullName>Marks__c</fullName>
    <label>Markss</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>