force-app/main/default/objects/Studdent__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transferred</fullName>
            </value>
            <value>
                <fullName>Pursuing</fullName>
            </value>
            <value>
                <fullName>Graduated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>