force-app/main/default/objects/Studdent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Hobbies__c</columns>
    <columns>Marks__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Phone_number__c</columns>
    <columns>Sports__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>